Cleaned up authentication code